--- a/.gitea/workflows/ValidatePRTitle.yaml
+++ b/.gitea/workflows/ValidatePRTitle.yaml
@@ -6,6 +6,7 @@ on:
       - opened
       - edited
       - synchronize
+  workflow_dispatch: # Enables manual trigger
 
 jobs:
   validate-pr-title:
