--- a/WebAppTemplate/WebAppTemplate.csproj
+++ b/WebAppTemplate/WebAppTemplate.csproj
@@ -170,9 +170,31 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Migrations\202511090541340_initialCreate.cs" />
+    <Compile Include="Migrations\202511090541340_initialCreate.Designer.cs">
+      <DependentUpon>202511090541340_initialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202511090558533_AddOwners.cs" />
+    <Compile Include="Migrations\202511090558533_AddOwners.Designer.cs">
+      <DependentUpon>202511090558533_AddOwners.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202511092230003_Added booking, pets, and the join table for them.cs" />
+    <Compile Include="Migrations\202511092230003_Added booking, pets, and the join table for them.Designer.cs">
+      <DependentUpon>202511092230003_Added booking, pets, and the join table for them.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202511092322053_contact model.cs" />
+    <Compile Include="Migrations\202511092322053_contact model.Designer.cs">
+      <DependentUpon>202511092322053_contact model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\BookingModel.cs" />
+    <Compile Include="Models\ContactModel.cs" />
+    <Compile Include="Models\OwnerModel.cs" />
+    <Compile Include="Models\PetBookingModel.cs" />
+    <Compile Include="Models\PetModel.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -287,6 +309,20 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202511090541340_initialCreate.resx">
+      <DependentUpon>202511090541340_initialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202511090558533_AddOwners.resx">
+      <DependentUpon>202511090558533_AddOwners.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202511092230003_Added booking, pets, and the join table for them.resx">
+      <DependentUpon>202511092230003_Added booking, pets, and the join table for them.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202511092322053_contact model.resx">
+      <DependentUpon>202511092322053_contact model.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
