--- a/WebAppTemplate/WebAppTemplate.csproj
+++ b/WebAppTemplate/WebAppTemplate.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Models\PetModel.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="ViewModels\ContactUsSubmissionVM.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -283,6 +284,8 @@
     <Content Include="Views\Admin\Pets.cshtml" />
     <Content Include="Views\Admin\Bookings.cshtml" />
     <Content Include="Views\MyAccount\index.cshtml" />
+    <Content Include="Views\ContactUs\ContactForm.cshtml" />
+    <Content Include="Views\ContactUs\ContactFormSubmitted.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
