AB#3161 - email functionality (#8)
Co-authored-by: ethan <e.huddoffical@gmail.com>
Reviewed-on: https://git.websurfingstudios.com/Phase1/PetBoarding_EthanHuddleston/pulls/8
Reviewed-by: Winston Luu <winstonluu38@gmail.com>

--- a/WebAppTemplate/WebAppTemplate.csproj
+++ b/WebAppTemplate/WebAppTemplate.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MyAccountController.cs" />
     <Compile Include="Controllers\PetsController.cs" />
+    <Compile Include="EmailServiceCredentials.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
