--- a/WebAppTemplate/Web.config
+++ b/WebAppTemplate/Web.config
@@ -8,7 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
+	<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EthanHPinePawRetreat;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -16,6 +16,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="emailSMTPURL" value="smtp.gmail.com" />
+	<add key="PortNumber" value="587" />
+	<add key="emailSMTPPasswordHash" value="urmioafthyevbxcu" />
+	<add key="emailFromAddress" value="huddtesting@gmail.com" />
+	<add key="emailFromName" value="NoReply - RyanM" />
+	<add key="emailAppName" value="blah" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
