added env variables for email and made phone required

--- a/PinePawRetreat/Web.config
+++ b/PinePawRetreat/Web.config
@@ -16,12 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="emailSMTPURL" value="smtp.gmail.com" />
-	<add key="PortNumber" value="587" />
-	<add key="emailSMTPPasswordHash" value="urmioafthyevbxcu" />
-	<add key="emailFromAddress" value="huddtesting@gmail.com" />
-	<add key="emailFromName" value="NoReply - RyanM" />
-	<add key="emailAppName" value="blah" />
+	  <add key="emailFromAddress" value="huddtesting@gmail.com" />
+	  <add key="emailFromName" value="NoReply - Pine Paw Retreat" />
+	  <add key="emailAppName" value="Pine Paw Retreat" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
