--- a/PinePawRetreat/PinePawRetreat.csproj
+++ b/PinePawRetreat/PinePawRetreat.csproj
@@ -204,6 +204,7 @@
     <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\PetVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -280,6 +281,7 @@
     <Content Include="Views\MyAccount\index.cshtml" />
     <Content Include="Views\ContactUs\ContactForm.cshtml" />
     <Content Include="Views\ContactUs\ContactFormSubmitted.cshtml" />
+    <Content Include="Views\Pets\_PetCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
