modified and tested pet card, added view and edit pet, passed guid to new views

--- a/PinePawRetreat/PinePawRetreat.csproj
+++ b/PinePawRetreat/PinePawRetreat.csproj
@@ -282,6 +282,8 @@
     <Content Include="Views\ContactUs\ContactForm.cshtml" />
     <Content Include="Views\ContactUs\ContactFormSubmitted.cshtml" />
     <Content Include="Views\Pets\_PetCard.cshtml" />
+    <Content Include="Views\Pets\ViewPet.cshtml" />
+    <Content Include="Views\Pets\EditPet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
