--- a/PinePawRetreat/PinePawRetreat.csproj
+++ b/PinePawRetreat/PinePawRetreat.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\202511241609316_adding nullable checktimes.Designer.cs">
       <DependentUpon>202511241609316_adding nullable checktimes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202601071544207_explicit FKs and lazy loading added.cs" />
+    <Compile Include="Migrations\202601071544207_explicit FKs and lazy loading added.Designer.cs">
+      <DependentUpon>202601071544207_explicit FKs and lazy loading added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -331,6 +335,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202511241609316_adding nullable checktimes.resx">
       <DependentUpon>202511241609316_adding nullable checktimes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202601071544207_explicit FKs and lazy loading added.resx">
+      <DependentUpon>202601071544207_explicit FKs and lazy loading added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
