--- a/PinePawRetreat/PinePawRetreat.csproj
+++ b/PinePawRetreat/PinePawRetreat.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Controllers\PetsController.cs" />
     <Compile Include="Controllers\VaccinationsController.cs" />
     <Compile Include="EmailServiceCredentials.cs" />
+    <Compile Include="Enums\VaccinationTypes.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -195,6 +196,10 @@
     <Compile Include="Migrations\202601071544207_explicit FKs and lazy loading added.cs" />
     <Compile Include="Migrations\202601071544207_explicit FKs and lazy loading added.Designer.cs">
       <DependentUpon>202601071544207_explicit FKs and lazy loading added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202601082012456_vaccinations table.cs" />
+    <Compile Include="Migrations\202601082012456_vaccinations table.Designer.cs">
+      <DependentUpon>202601082012456_vaccinations table.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -343,6 +348,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202601071544207_explicit FKs and lazy loading added.resx">
       <DependentUpon>202601071544207_explicit FKs and lazy loading added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202601082012456_vaccinations table.resx">
+      <DependentUpon>202601082012456_vaccinations table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
